avi_hol_files/avimart_demo/avimart/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: avimart
  labels:
    pod-security.kubernetes.io/enforce: privileged
