avi_hol_files/avimart_demo/avimart/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hol-tkg-gateway
  namespace: default
spec:
  gatewayClassName: avi-lb
  listeners:
  - name: foo-http
    protocol: HTTP
    port: 80
    hostname: "*.vks1.site-a.vcf.lab"
    allowedRoutes:
      namespaces:
        from: All
  - name: foo-https
    protocol: HTTPS
    port: 443
    hostname: "*.vks1.site-a.vcf.lab"
    allowedRoutes:
      namespaces:
        from: All
    tls:
      certificateRefs:
      - kind: Secret
        group: ""
        name: wildcard.site-a.vcf.lab
